--- a/report/manuscript.tex
+++ b/report/manuscript.tex
@@ -53,7 +53,7 @@ The datasets are collected by numerical simulations of two scenario configuratio
     The number of spans and the length of the first span are the labeled variables of the dataset.
     The length of the first span could be 80 km, 60 km, or 40 km, which are called \textit{optimal}, \textit{sub-optimal}, and \textit{degradation} modes, respectively.
     The length of other spans is 80 km.
-    The total number of  2250 scans (datapoints) of IQ constellation profile are collected.
+    All simulation modes are combined and a dataset with the total number of 2250 scans (datapoints) of IQ constellation profile is created. 
     Each datapoint consists of 2048$\times$2+1+1 columns that represent in-phase and quadrature components of symbol samples, the distance between the transmitter and the observation point, and datpoint mode.
     \item \textit{multiple links scenario}, where LPs travel 5 reconfigurable optical add-drop multiplexers (ROADMs) and 4 equal links.
     The number and length of spans in each link, launch power, and the observation point are the labeled variables of the dataset.
@@ -86,7 +86,10 @@ Then, a support vector machine (SVM) classification model classifies the launch 
 
 \section{Results}
 \label{section:results}
-
+The proposed pipeline in Fig.~\ref{figure:models} is implemented in Python and available in~\cite{code}.
+PCA models compress IQ constellation profiles to the embeddings with size 50.
+The datasets are split into train-test subsets with 67\%-33\% ratio.
+Module in Fig.~\ref{figure:models} are trained with the train subset, and the test results are reported in the following.
 
 
 
@@ -103,6 +106,7 @@ Then, a support vector machine (SVM) classification model classifies the launch 
 
 \bibitem{data146_2022}Ruiz Ramírez, M., Velasco Esteban, L. \& Sequeira, D. Optical Constellation Analysis (OCATA). (CORA.Repositori de Dades de Recerca,2022), https://doi.org/10.34810/data146
 
+\bibitem{code}Project, T. GNPy: OptiHEREE. {\em GitHub Repository}. (2023), https://github.com/Telecominfraproject/oopt-gnpy
 
 
 
