--- a/report/manuscript.tex
+++ b/report/manuscript.tex
@@ -35,12 +35,12 @@ Lightpath distance between transmitter and constellation profile observation poi
 Digital twins (DTs) with proper abstractions could be used for deriving insights, diagnosis, planning, and carrying out drills on complex systems.
 An analytical DT called GNPy is already developed for signal propagation in optical networks~\cite{gnpy}.
 However, sometimes analytical DTs are hard to create.
-Machine learning (ML) approach is the algorithmically simple candidate for building DTs with minimal knowldege in subject matter.
+Machine learning (ML) approach is the algorithmically simple candidate for building DTs with minimal knowledge of the subject matter.
 
 An ML-based DT could be used to estimate lightpath (LP) attributes (e.g., launch power and distance) given In-Phase and Quadrature (IQ) optical constellation diagrams.
-For example, LP launch power estimation could be used to dignose potential discrepancies between planned, telemetry, and actual launch power. 
-Such attribute estimations could be performed at the pass through observation points via optical spectrum analyzers to give a better resolution of the LP status as well as receiver site~\cite{9761942}.
-After discrepancy detection, the adopted remediatory measures could be initiated.
+For example, LP launch power estimation could be used to diagnose potential discrepancies between planned, telemetry, and actual launch power. 
+Such attribute estimations could be performed at the pass-through observation points via optical spectrum analyzers to give a better resolution of the LP status as well as the receiver site~\cite{9761942}.
+After discrepancy detection, the adopted remediation measures could be initiated.
 
 In this report, we estimate and launch power and the distance between transmitter and observation point of lucid lightpaths.
 
@@ -49,26 +49,26 @@ In this report, we estimate and launch power and the distance between transmitte
 The datasets are collected by numerical simulations of two scenario configurations:
 \begin{enumerate}
     \item \textit{Single link scenario}, where LPs travel up to 25 spans deployed between the transmitter and receiver.
-    The observation point is the receiver, where the IQ constellation profile consisting of 2048 symbol samples are scanned for each datapoint.
+    The observation point is the receiver, where the IQ constellation profiles consisting of 2048 symbol samples is scanned for each datapoint.
     The number of spans and the length of the first span are the labeled variables of the dataset.
     The length of the first span could be 80 km, 60 km, or 40 km, which are called \textit{optimal}, \textit{sub-optimal}, and \textit{degradation} modes, respectively.
     The length of other spans is 80 km.
-    All simulation modes are combined and a dataset with the total number of 2250 scans (datapoints) of IQ constellation profile is created. 
-    Each datapoint consists of 2048$\times$2+1+1 columns that represent in-phase and quadrature components of symbol samples, the distance between the transmitter and the observation point, and datpoint mode.
+    All simulation modes are combined and a dataset with the total number of 2250 scans (datapoints) of IQ constellation profiles is created. 
+    Each datapoint consists of 2048$\times$2+1+1 columns that represent in-phase and quadrature components of symbol samples, the distance between the transmitter and the observation point, and datapoint mode.
     \item \textit{multiple links scenario}, where LPs travel 5 reconfigurable optical add-drop multiplexers (ROADMs) and 4 equal links.
     The number and length of spans in each link, launch power, and the observation point are the labeled variables of the dataset.
     The observation point candidates are ingress and egress ports of ROADMs, where the IQ constellation profile consisting of 8192 symbol samples are scanned for each datapoint.
-    The total number of 800 scans (datapoints) of IQ constellation profile are collected.
+    A total number of 800 scans (datapoints) of IQ constellation profiles are collected.
     Each datapoint consists of 8192$\times$2+1+1+1 columns that represent in-phase and quadrature components of symbol samples, the distance between the transmitter and the observation point, the ROADM side of the observation point, and the launch power.
-    The ROADM side could be ingress or egress, which is represented with a binary.
-    The launch power is wether 1 or 2 dBm, which is also represented with a binary.
+    The ROADM side could be ingress or egress, which is represented with a binary number.
+    The launch power is either 1 or 2 dBm, which is also represented with a binary number.
 \end{enumerate}
 The data generation simulation configurations are further elaborated in~\cite{data146_2022}.
 
 \section{Machine Learning Models}
 \label{section:ml_models}
 We estimate the distance between the transmitter and the observation point in the single link scenario.
-We also classifiy the launch power in the multiple links scenario since it is the lightpath configuration attribute and could be vulnerable to potential misconfiguration.
+We also classify the launch power in the multiple links scenario since it is the lightpath configuration attribute and could be vulnerable to potential misconfiguration.
 The ML pipeline for distance regression and launch power classification is shown in Fig.~\ref{figure:models}.
 \begin{figure}
 	\centering
@@ -77,7 +77,7 @@ The ML pipeline for distance regression and launch power classification is shown
 	\label{figure:models}
 \end{figure}
 The IQ constellation profile is compressed with the principal component analysis (PCA) method.
-PCA projects the oiginal data to low dim directions, which maximize the variance.
+PCA projects the original data to low dim directions that maximize the variance.
 Before PCA, the data is scaled by a custom standard scaler that operates with $\frac{(\textbf{D}-\mu)}{\sigma}$, where $\textbf{D}$, $\mu$, and $\sigma$ are the IQ constellation profile, mean, and standard deviation of all columns of $\textbf{D}$.
 A linear regression model estimates the distance for the single link scenario after another standard scaling across columns of low dimensional embeddings resulted from PCA.
 The column standard scaler operates with $\frac{\textbf{D - M}}{\mathbf{\Sigma}}$, where $\textbf{D}$, $\textbf{M}$, and $\mathbf{\Sigma}$ are the IQ constellation profile, mean vector, and standard deviation vector of each column of $\textbf{D}$.
@@ -89,22 +89,23 @@ Then, a support vector machine (SVM) classification model classifies the launch 
 The proposed pipeline in Fig.~\ref{figure:models} is implemented in Python and available in~\cite{code}.
 PCA models compress IQ constellation profiles to the embeddings with size 50.
 The datasets are split into train-test subsets with 67\%-33\% ratio.
-Module in Fig.~\ref{figure:models} are trained with the train subset, and the test results are reported in the following.
+Modules in Fig.~\ref{figure:models} are trained with the training subset.
+The testing subset is used for validating the pipelines' performance.
 \subsection{Single Link Scenario}
 \label{section:results_single_link}
 First, the whole dataset is compressed to embeddings of 2 dimensions with PCA.
-Fig.~\ref{figure:single_whole} shows that there is a clear distincion between the 3 modes in the 2D embeddings.
+Fig.~\ref{figure:single_whole} shows that there is a clear distinction between the 3 modes in the 2D embeddings.
 \begin{figure}
 	\centering
     \includegraphics[width=\columnwidth]{figures/single_scenario.png}
     \caption{Single Link Scenario Embeddings}
 	\label{figure:single_whole}
 \end{figure}
-The same compression process is applied to datapoints of \textit{optimal} mode, which is shown in Fig.~\ref{figure:single_optimal} along with the distance between transmitter and observation point.
+The same compression process is applied to datapoints of \textit{optimal} mode, which is shown in Fig.~\ref{figure:single_optimal} along with the distance between the transmitter and the observation point.
 \begin{figure}
 	\centering
     \includegraphics[width=\columnwidth]{figures/single_scenario(optimal).png}
-    \caption{Single Link Scenario Embeddings for \textit{optimal} mode}
+    \caption{Single Link Scenario Embeddings for the \textit{optimal} mode}
 	\label{figure:single_optimal}
 \end{figure}
 The distance is distinguishable with 2D embeddings.
@@ -136,11 +137,11 @@ We compress the IQ constellation profile with PCA and depict the 2D embeddings i
     \caption{Multiple Links Scenario Embeddings. The 1 and 2 dBm launch power datapoint embeddings are shown with purple and red colors, respectively.}
 	\label{figure:multiple_whole}
 \end{figure}
-There no clear distinction between 2D embeddings of 1 and 2 dBm constellation profliles.
-However increasing the size of embeddings might create clusters associated to launch power.
+There is no clear distinction between 2D embeddings of 1 and 2 dBm constellation profiles.
+However, increasing the size of embeddings might create clusters associated with launch power.
 
 We train the launch power classification in Fig.~\ref{figure:models}.
-The confusion matrix of testing data subset is reported in Table.~\ref{table:confusion_mat}.
+The confusion matrix of the testing data subset is reported in Table.~\ref{table:confusion_mat}.
 \begin{table}
     \centering
     \caption{Launch Power Classification Confusion Matrix}
@@ -154,16 +155,16 @@ The confusion matrix of testing data subset is reported in Table.~\ref{table:con
     \end{tabular}
     \label{table:confusion_mat}
 \end{table}
-The accuracy of classificaion is 0.87121 based on Table.~\ref{table:confusion_mat}
+The accuracy of classification is 0.87121 based on Table.~\ref{table:confusion_mat}
 
 \section{Conclusion}
 \label{section:conclusion}
 The IQ constellation profile could be used to estimate lightpath attributes.
-The report investigates launch power and distance between transmitter and observation point estimation use-cases with ML.
-The use-cases do not require information about the dynamics of optical signal propagation in optical networks.
-Yet, estimations could be derived with raw dataset. 
+The report investigates launch power and distance between transmitter and observation point estimation use cases with ML.
+The use cases do not require information about the dynamics of optical signal propagation in optical networks.
+Yet, estimations could be derived with the raw dataset. 
 
-The study could be extended in several directions, including: investigation of more efficient methods for compression (e.g., Gaussian mixture models), using more complex ML models for classification and regression, hyperparameter search for finding the best ML configurations that optimise the metrics, and error analysis of dataset cohorts.
+The study could be extended in several directions, including: investigation of more efficient methods for compression (e.g., Gaussian mixture models), using more complex ML models for classification and regression, hyperparameter search for finding the best ML configurations that optimize the metrics, and error analysis of dataset cohorts.
 
 
 \begin{thebibliography}{1}
