code review performed and normalization bug resolved

--- a/report/manuscript.tex
+++ b/report/manuscript.tex
@@ -139,8 +139,8 @@ The multiple links scenario dataset is used for launch power classification.
 We compress the IQ constellation profile with PCA and depict the 2D embeddings in Fig.~\ref{figure:multiple_whole}.
 \begin{figure}
 	\centering
-    \includegraphics[width=\columnwidth]{figures/multiple_scenario.png}
-    \caption{Multiple links scenario embeddings. The 1 and 2 dBm launch power datapoint embeddings are shown with purple and red colors, respectively.}
+    \includegraphics[width=\columnwidth]{figures/multiple_scenario_zoommed.png}
+    \caption{Multiple links scenario embeddings. The 1 and 2 dBm launch power datapoint embeddings are shown with purple and red colors, respectively. Several outlier embeddings reside outside the plot scope for better visualization.}
 	\label{figure:multiple_whole}
 \end{figure}
 There is no clear distinction between the 2D embeddings of 1 and 2 dBm constellation profiles.
